--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@
 }
 .container{
     
+   
     width: 100%;
+    
+  
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -18,7 +22,7 @@
     border-radius: 20px;
     padding: 20px;
     margin: 20px;
-
+    display: grid;
     
 }
 
@@ -30,32 +34,30 @@
 .tops input{
     width: 100%;
     height: 100%;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     border-radius: 10px;
     text-align: right;
-   
-
+    justify-content: flex-end;
+    display: flex;
+    flex: 1;
 }
 
 
 .cal input[type=button]{
   
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 10px;
     margin: 5px;
-    font-size: 25px;
+    font-size: 20px;
  
   
 }
 .calinput{
 text-align: center;
+display: flex;
+align-items: center;
+justify-content: center;
 }
-@media(min-width:320px){
-    .cal{
-        min-width: 320px;
-        justify-content: center;
-    }
 
-}
